--- a/views/umbrella.pug
+++ b/views/umbrella.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  -let results=[{color:"pink",cost:18,size:"small"},{color:"green",cost:20,size:"medium"},{color:"yellow",cost:19,size:"large"}]
+  -var results=[{color:"pink",cost:18,size:"small"},{color:"green",cost:20,size:"medium"},{color:"yellow",cost:19,size:"large"}]
     
     div(class="container-fluid")
     div(class="row")
