--- a/views/umbrella.pug
+++ b/views/umbrella.pug
@@ -8,9 +8,9 @@ block content
     div(class="row")
         each item,index in results
             div(class="col-sm-2" onclick=`buy(${index})`)
-                p Color:  #{item.color} 
-                p Cost: #{item.cost}
-                p Size: #{item.size}
+                p color:  #{item.color} 
+                p cost: #{item.cost}
+                p size: #{item.size}
     script.
       function buy(index)
       {
