--- a/views/umbrellacreate.pug
+++ b/views/umbrellacreate.pug
@@ -7,7 +7,7 @@ block content
     input#color(type='String', name='color')
   div.form-group
     label.umbrellaAttr(for='cost') umbrella Cost
-    input#cost(type='number', name='cost')
+    input#cost(type='number', name='cost' min = 5, max = 1000)
   div.form-group
     label.umbrellaAttr(for='size') umbrella size
     input#size(type='String', name='size')
