--- a/views/umbrellaupdate.pug
+++ b/views/umbrellaupdate.pug
@@ -18,7 +18,7 @@ block content
      input#brand(type='String', name='color', value= color)
    div.form-group
      label.umbrellaAttr(for='cost') umbrella cost
-     input#cost(type='number', name='cost', value= cost )
+     input#cost(type='number', name='cost', value= cost min = 5, max = 1000)
    div.form-group
      label.umbrellaAttr(for='size') umbrella size
      input#color(type='String', name='size', value= size )
