--- a/views/umbrella.pug
+++ b/views/umbrella.pug
@@ -2,24 +2,25 @@ extends layout
 
 block content
   h1= title
-  -var results=[{color:"pink",cost:18,size:"small"},{color:"green",cost:20,size:"medium"},{color:"yellow",cost:19,size:"large"}]
-    
-    div(class="container-fluid")
-    div(class="row m-1")
-        each item,index in results
-         -let destination = `dispatch(\"/umbrella/update?id=${item._id}\")`
-            div(class="col-sm-2" onclick=`buy(${index})`)
-
-                p color:#{item.color} 
-                p cost: #{item.cost}
-                p size: #{item.size}
-                button.btn( class="btn-primary ml-1", onclick= destination) Update
-    script.
-      function buy(index)
-      {
-        alert(`You purchased item ${index+1}.`)
-      }
-      function dispatch(path){
-        window.location.href=path
-      }
-
+  - let items = results
+  - let destination1 = `dispatch(\"/umbrella/create\")`
+  button.btn( class="btn-primary ml-1", onclick= destination1) Create
+  div(claass="container-fluid mt-3")
+   div(class="row m-1")
+    each item,index in items
+     - let destination = `dispatch(\"/umbrella/update?id=${item._id}\")`
+     - let destination2 = `dispatch(\"/umbrella/detail?id=${item._id}\")`
+     - let destination3 = `dispatch(\"/umbrella/delete?id=${item._id}\")`
+     div(class="col-sm-3 bg-info m-2 p-4" onclick=`buy(${index})`) #{item.umbrella_type} - #{item.size } - #{item.cost}
+      button.btn( class="btn-primary ml-1", onclick= destination) Update
+      button.btn( class="btn-primary ml-1", onclick= destination2) Detail
+      button.btn( class="btn-primary ml-1", onclick= destination3) Delete
+  script.
+   function buy(itemNo)
+   {
+     alert(`You purchased Item ${itemNo+1}`)
+   }
+   function dispatch(path)
+   {
+     window.location.href=path
+   }
